--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
+html,
+body {
+    height: 100%;
+    font-family: "Pixelify Sans";
+    letter-spacing: 0.5rem;
+    background-color: mediumslateblue;
+    color: darkorange;
+}
+
+button {
+    font-family: inherit;
+}
+
+
+
 @keyframes bounce {
 
     0%,
@@ -20,17 +35,18 @@
 }
 
 div {
-    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 40px;
 }
 
 .choice {
     margin: 10px;
     padding: 10px;
-    display: flexbox;
-    justify-content: space-evenly;
     border-radius: 5px;
 }
 
 .choice:hover {
-    animation: bounce 0.5s;
+    animation: bounce 0.75s;
 }
