--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html,
 body {
     height: 100%;
-    font-family: "Pixelify Sans";
+    font-family: "Rubik", sans-serif;
     letter-spacing: 0.5rem;
     background-color: mediumslateblue;
     color: darkorange;
@@ -9,6 +9,7 @@ body {
 
 button {
     font-family: inherit;
+    background-color: rgb(255, 255, 255);
 }
 
 
